--- a/src/components/LinkButton.scss
+++ b/src/components/LinkButton.scss
@@ -9,9 +9,11 @@
   border: none;
   min-width: 130px;
 
-  &:hover,
-  &:focus,
-  &:active {
+  &:hover {
+    border-bottom: 2px solid #2f80ed;
+  }
+
+  &__active {
     border-bottom: 2px solid #2f80ed;
   }
 }
